<resources>
    <string name="app_name">Kovid</string>

    <string name="string_home">홈</string>
    <string name="string_country">세계별</string>
    <string name="string_map">지도</string>
    <string name="string_news">뉴스</string>

    <string name="data_loading">Data Loading..</string>
    <string name="network_error">Network Error</string>
    <string name="current_covid">%1s 신규확진자</string>
    <string name="default_decide">000000</string>
    <string name="day_7">7일</string>
    <string name="day_30">30일</string>

    <string name="area_table">지역별 표</string>

    <string name="country">지역</string>
    <string name="accumulate_deice">누적확진자</string>
    <string name="new_decide">신규확진자</string>
    
    <string name="searching_sido">%1s에 위치한 진료소 정보를 찾는중…</string>
    <string name="initial_clinic_data">최초 진료소 정보 수징중…\n다소 시간이 소요될 수 있습니다.</string>
    <string name="nothing_data">데이터가 존재하지 않습니다.</string>

    <string name="general_clinic">종합병원</string>
    <string name="temporary_clinic">임시 선별 진료소</string>
    <string name="selective_clinic">선별 진료소</string>

    <string name="permission_check">이 기능을 실행하려면 위치 접근 권한이 필요합니다.</string>
    <string name="permission_setting">위치 권한이 없을시 해당 기능을 이용할 수 없습니다. 권한을 허용해주세요.</string>
    <string name="move_setting">설정 이동</string>

    <string name="ok">확인</string>

    <string name="sigungu">시군구 검색</string>
</resources>