<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraint"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_coner_round"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/area_country"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:background="@color/widjet_bg_color"
                android:gravity="center"
                android:paddingVertical="8dp"
                android:text="@string/country"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toStartOf="@id/area_total_case"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/area_total_case"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:background="@color/widjet_bg_color"
                android:gravity="center"
                android:paddingVertical="8dp"
                android:text="@string/accumulate_deice"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@id/area_country"
                app:layout_constraintEnd_toStartOf="@id/area_new_case"
                app:layout_constraintStart_toEndOf="@id/area_country"
                app:layout_constraintTop_toTopOf="@id/area_country" />

            <TextView
                android:id="@+id/area_new_case"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:background="@color/widjet_bg_color"
                android:gravity="center"
                android:paddingVertical="8dp"
                android:text="@string/new_decide"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/area_total_case"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <com.airbnb.epoxy.EpoxyRecyclerView
            android:id="@+id/area_item_epoxy"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:nestedScrollingEnabled="false"
            app:layout_constraintTop_toBottomOf="@id/constraint" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>